--- a/Public/index.html
+++ b/Public/index.html
@@ -9,9 +9,13 @@
 
 <body>
     <h1>Google Custom Search Chatbot</h1>
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <df-messenger intent="WELCOME" chat-title="Custom_Search" agent-id="e1fbfedc-4b56-4ad7-96b4-1c402cb83fba"
-        language-code="en"></df-messenger>
+    <script type="text/javascript" id="botcopy-embedder-d7lcfheammjct" class="botcopy-embedder-d7lcfheammjct"
+        data-botId="60019e61b27c150008354665">
+            var s = document.createElement('script');
+            s.type = 'text/javascript'; s.async = true;
+            s.src = 'https://widget.botcopy.com/js/injection.js';
+            document.getElementById('botcopy-embedder-d7lcfheammjct').appendChild(s);
+        </script>
 
 </body>
 
